# niftycal

./: .gitignore  CITATIONS.txt  CMakeLists.txt  LICENSE.txt  NiftyCalConfig.cmake.in  NiftyCalConfigVersion.cmake.in  README.md  UseNiftyCal.cmake.in
Code/: CMakeLists.txt  niftkAprilTagsPointDetector.cxx  niftkAprilTagsPointDetector.h  niftkCalibrateTimingLag.cxx  niftkCalibrateTimingLag.h  niftkChessboardPointDetector.cxx  niftkChessboardPointDetector.h  niftkCirclesIterativePointDetector.cxx  niftkCirclesIterativePointDetector.h  niftkCirclesPointDetector.cxx  niftkCirclesPointDetector.h  niftkHandEyeCalibration.cxx  niftkHandEyeCalibration.h  niftkHomographyUtilities.cxx  niftkHomographyUtilities.h  niftkIOUtilities.cxx  niftkIOUtilities.h  niftkIOptimiser.cxx  niftkIOptimiser.h  niftkIPoint2DDetector.cxx  niftkIPoint2DDetector.h  niftkIPointDetector.cxx  niftkIPointDetector.h  niftkIterativeCalibrationUtilities.cxx  niftkIterativeCalibrationUtilities_p.h  niftkIterativeMonoCameraCalibration.cxx  niftkIterativeMonoCameraCalibration.h  niftkIterativeStereoCameraCalibration.cxx  niftkIterativeStereoCameraCalibration.h  niftkMatrixUtilities.cxx  niftkMatrixUtilities.h  niftkMaxERE.cxx  niftkMaxERE.h  niftkModel3D.cxx  niftkModel3D.h  niftkMonoCalibration.cxx  niftkMonoCalibrationFromPoints.cxx  niftkMonoCameraCalibration.cxx  niftkMonoCameraCalibration.h  niftkNiftyCalException.cxx  (+92 more)
Code/Apps/: CMakeLists.txt  niftkAprilTagsCalibrationWithRendering.cxx  niftkHandEyeCalibrationUsingPointToLine.cxx  niftkMonoCalibrationFromPoints.cxx  niftkMonoIterativeAprilTagsCalibration.cxx  niftkMonoIterativeRingsCalibration.cxx  niftkPoseFromPoints.cxx  niftkRenderCalibratedModel.cxx  niftkStereoCalibrationFromPoints.cxx  niftkStereoChessboardCalibration.cxx  niftkStereoIterativeAprilTagsCalibration.cxx  niftkStereoIterativeCirclesCalibration.cxx  niftkStereoIterativeRingsCalibration.cxx  niftkStereoSimulationByParameter.cxx  niftkStereoSimulationFromPoints.cxx  niftkStereoSimulationWithNoise.cxx  niftkTimingCalibrationFromPoints.cxx
Code/Bash/: montage216.txt  montage24.txt  niftkConvertExtractedPixelsTomm.bash  niftkMakeAprilTagGrid.bash  niftkMakeRingGrid.bash  niftkMakeRingTemplates.bash
Code/Detectors/: niftkAprilTagsPointDetector.cxx  niftkAprilTagsPointDetector.h  niftkBallDetector.cxx  niftkBallDetector.h  niftkChessboardPointDetector.cxx  niftkChessboardPointDetector.h  niftkCirclesIterativePointDetector.h  niftkCirclesPointDetector.cxx  niftkCirclesPointDetector.h  niftkPointDetector.cxx  niftkPointDetector.h  niftkRedBallDetector.cxx  niftkRedBallDetector.h  niftkRingsPointDetector.cxx  niftkRingsPointDetector.h  niftkSideBySideDetector.cxx  niftkSideBySideDetector.h  niftkTemplateCirclesPointDetector.cxx  niftkTemplateCirclesPointDetector.h  niftkTemplateMatchingPointDetector.cxx  niftkTemplateMatchingPointDetector.h  niftkTemplateRingsPointDetector.cxx  niftkTemplateRingsPointDetector.h  niftkWhiteBallDetector.cxx  niftkWhiteBallDetector.h
Code/IntensityBased/: niftkCalibratedCamera.cxx  niftkCalibratedCamera.h  niftkCalibratedRenderingPipeline.cxx  niftkCalibratedRenderingPipeline.h  niftkIntensityBasedCameraCalibration.cxx  niftkIntensityBasedCameraCalibration.h
Code/Internal/: niftkCalibrationUtilities.cxx  niftkCalibrationUtilities_p.h  niftkIterativeCalibrationUtilities.cxx  niftkIterativeCalibrationUtilities_p.h  niftkNonLinear12DOFHandEyeCostFunction.cxx  niftkNonLinear12DOFHandEyeCostFunction.h  niftkNonLinear12DOFHandEyeOptimiser.cxx  niftkNonLinear12DOFHandEyeOptimiser.h  niftkNonLinearCeresStereoOptimiser.cxx  niftkNonLinearCeresStereoOptimiser.h  niftkNonLinearCostFunction.cxx  niftkNonLinearCostFunction.h  niftkNonLinearHandEyeCostFunction.h  niftkNonLinearMaltiHandEyeCostFunction.cxx  niftkNonLinearMaltiHandEyeCostFunction.h  niftkNonLinearMaltiHandEyeOptimiser.cxx  niftkNonLinearMaltiHandEyeOptimiser.h  niftkNonLinearMonoCameraCalibration3DCostFunction.cxx  niftkNonLinearMonoCameraCalibration3DOptimiser.cxx  niftkNonLinearMonoCameraCalibration3DOptimiser.h  niftkNonLinearMonoCostFunction.cxx  niftkNonLinearMonoCostFunction.h  niftkNonLinearMonoCostFunction3D.h  niftkNonLinearNDOFHandEyeCostFunction.cxx  niftkNonLinearNDOFHandEyeCostFunction.h  niftkNonLinearNDOFHandEyeOptimiser.cxx  niftkNonLinearNDOFHandEyeOptimiser.h  niftkNonLinearNoIntrinsicsCostFunction.cxx  niftkNonLinearNoIntrinsicsCostFunction.h  niftkNonLinearNoIntrinsicsHandEyeCostFunction.cxx  niftkNonLinearNoIntrinsicsHandEyeCostFunction.h  niftkNonLinearStereo2DCostFunction.cxx  niftkNonLinearStereo2DCostFunction.h  niftkNonLinearStereo3DCostFunction.cxx  niftkNonLinearStereo3DCostFunction.h  (+75 more)
Testing/: CMakeLists.txt  niftkCatchMain.cxx  niftkCatchMain.h  niftkElvisHandEye.cxx  niftkElvisHandEyeTest.cxx  niftkExtractAprilTagsPointsTest.cxx  niftkExtractBallTest.cxx  niftkExtractChessboardPoints.cxx  niftkExtractChessboardPointsTest.cxx  niftkExtractCirclesPointsTest.cxx  niftkExtractRingsPointsTest.cxx  niftkInterpolateQuadraticSurfaceTest.cxx  niftkIterativeMonoAprilTagsCameraCalibrationTest.cxx  niftkIterativeMonoChessboardCameraCalibrationTest.cxx  niftkIterativeMonoRingsCameraCalibrationTest.cxx  niftkIterativeStereoAprilTagsCameraCalibrationTest.cxx  niftkIterativeStereoChessboardCameraCalibrationTest.cxx  niftkIterativeStereoCirclesCameraCalibrationTest.cxx  niftkIterativeTemplateMatchingCameraCalibrationTest.cxx  niftkLoadModelTest.cxx  niftkLoadPointsTest.cxx  niftkMatrixAverageTest.cxx  niftkMonoChessboardCameraCalibrationTest.cxx  niftkMonoChessboardHandEyeCalibrationTest.cxx  niftkMorganHandEyeTest.cxx  niftkNiftyCalExceptionTest.cxx  niftkPointDistortionTest.cxx  niftkPointUtilitiesTest.cxx  niftkStereoChessboardCameraCalibrationTest.cxx  niftkStereoMatrixIOTest.cxx  niftkTimingCalibrationTest.cxx  niftkTimingCalibrationUtilitiesTest.cxx  niftkTsaiCoplanarCalibrationTest.cxx  niftkTsaiMonoCalibrationTest.cxx  niftkTsaiNonCoplanarCalibrationTest.cxx  niftkTsaiReferenceNonCoplanerCalibrationTest.cxx  niftkTsaiStereoCalibrationTest.cxx  niftkWarpChessboardByHomographyTest.cxx
(+1283 files in other folders)
